Fixed some text overlaps. WIP

--- a/style.css
+++ b/style.css
@@ -703,11 +703,12 @@ p {
 }
 
 .label-below {
-    transform: rotate(45deg) translate(15px, 0);
+    transform: rotate(45deg) translate(12px, 0);
 }
 
+/* label-above kept as no-op for backwards compat */
 .label-above {
-    transform: translate(10px, -25px) rotate(45deg);
+    transform: rotate(45deg) translate(12px, 0);
 }
 
 /* Tooltip */
